collapse menu fixed
color changed to secondary opacity 10, and font-weight of the collapse menu bar (collapse navbar) fixed.

--- a/css/index.css
+++ b/css/index.css
@@ -422,6 +422,10 @@ li {
     text-decoration: underline;
 }
 
+.bgCollapseB {
+    background-color: #e9ecef;
+}
+
 /* ************************************************************************************************ */
 @media all and (max-width: 575px) {
     /* body {
